correctly handle <pre> and code overflow

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -5,8 +5,12 @@
 }
 
 .content {
-  width: 768px;
+  width: 750px;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 24px;
+
+  @media (max-width: 800px) {
+    width: auto;
+  }
 }
