--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -35,6 +35,7 @@ body {
   font-family: 'Fira Sans', sans-serif;
 }
 
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 1.5;
@@ -79,23 +80,6 @@ code {
   border-radius: 4px;
   display: inline-block;
   padding: 0.3em 0.4em 0.35em;
-}
-
-pre {
-  font-size: 16px;
-  line-height: 1.5;
-  margin: 32px 0;
-  min-width: 100%;
-  display: flex;
-  overflow-x: auto;
-  border-radius: 4px;
-}
-
-.prism-code {
-  padding: 24px;
-  padding-bottom: 0;
-  border-radius: 4px;
-  border: 1px solid #273746;
 }
 
 a {
